Fixed university slice overflow bug

--- a/ref-au/resources/assets/sass/page/mainHome.scss
+++ b/ref-au/resources/assets/sass/page/mainHome.scss
@@ -121,6 +121,7 @@
 .slice--university {
     height: 200px;
     border-bottom: solid 1px #e5e5e5;
+    overflow: hidden;
 
     .university {
         display: table;
